.k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digishop-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: authen-service
            port: { number: 4001 }
      - path: /api/customer
        pathType: Prefix
        backend:
          service:
            name: customer-service2
            port: { number: 4002 }
      - path: /api/merchant
        pathType: Prefix
        backend:
          service:
            name: merchant-service
            port: { number: 4003 }
      - path: /api/admin
        pathType: Prefix
        backend:
          service:
            name: portal-service
            port: { number: 4004 }
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer2
            port: { number: 3001 }
  - host: merchant.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: merchant
            port: { number: 3002 }
  - host: portal.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portal
            port: { number: 3003 }
